2010-07-26  Dmitry Dulepov  <dmitry@typo3.org>

	* Reverted the fix for #15128 because further investigation is required

2010-07-25  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14849: Sprites - user defined page types/modules are not respected anymore (thanks to Steffen Ritter)

2010-07-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 2.0.3

2010-07-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14794: Missing border-bottom for inactive tabs (Thanks to Steffen Gebert)
	* Fixed bug #15188: Remove default greyed out effect for CEs (Thanks to Steffen Gebert)
	* Fixed bug #14969: Colors for highlighting the tree and a versioned page can't be distinguished (Thanks to Steffen Gebert)

2010-07-23  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15195: TSanalyzer: Add link to breakpoints also in syntaxhighlight mode

2010-07-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15203: htmlArea RTE: Modify link option missing in context menu
	* Fixed bug #15050: htmlArea RTE: .htmlarea .statusBar relative path incorrect (Thanks to Felix Kopp)

2010-07-21  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #15179: Tree depth retrieval inconsistently limited to 20 levels int3lib_pageSelect

2010-07-21  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15067: Background Image in Element Browser is repeated, but should not be! (Thanks to Steffen Gebert)
	* Fixed bug #15156: Text in template analyzer is "white on white" if syntax highlighting is disabled (Thanks to Steffen Gebert)

2010-07-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15130: Backend search does not find non-latin1 characters
	* Fixed bug #15128: RTE creates <link> tag incorrectly if there is a non-empty title

2010-07-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #15169: Superfluous comma in CSS

2010-07-18  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15000: remove IM 4.2.9 recommendation in install tool (Thanks to Steffen Gebert)